fix image stretching

--- a/web_dev/sas_web/static/public/css/header.css
+++ b/web_dev/sas_web/static/public/css/header.css
@@ -1,6 +1,10 @@
 html {
     background-color: white;
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
 #logo {
     width: 90%;
     padding-left: 2%;
